fix: default input[type=date] is too small wider screens

--- a/day2025-date-picker/less/styles.less
+++ b/day2025-date-picker/less/styles.less
@@ -200,4 +200,8 @@ main {
   cursor: pointer;
   text-decoration: underline;
   display: inline-block;
+
+  input[type="date"] {
+    font-size: unset;
+  }
 }
